Tue Oct 22 15:32:31 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwindow.c: Actively monitor the screen of the
	parent. (#80281)

	* gtk/gtkentry.c: Fix missing prototype from the 
	last commit.

Tue Oct 22 15:46:09 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkentry.c (gtk_entry_unrealize): Reset the 
	layout, since it holds a reference to the font on
	a particular screen.

Tue Oct 22 15:13:59 2002  Owen Taylor  <otaylor@redhat.com>
	
	* gtk/gtkimmulticontext.c: Include config.h
	(#96441, Morten Welinder)

Tue Oct 22 15:03:41 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/fnmatch.h: When compiling our on fnmatch.c, 
	#define fnmatch _gtk_fnmatch (#92890, Jacob Berkman)

Fri Oct 18 16:47:02 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkevents-x11.c (translate_key_event): Produce
	C-m, not C-j for return. Handle Escape.

2002-10-22  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkstatusbar.c (gtk_statusbar_get_type): 
	(gtk_statusbar_class_init): It is called GtkStatusbar, not
	GtkStatusBar. This was changed accidentally during deprecation
	cleanup and caused links in the API docs to break.  (#96390)

Mon Oct 21 14:04:39 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkentry.c (gtk_entry_get_public_chars): Return
	"" for entry->invisible_char == 0, otherwise N copies
	of entry->invisible_char. (#95486, Vitaly Tishkov)

	* gtk/gtkentry.c: Fix a bunch of places where entry->text
	instead of layout->text was being used for computation
	of offsets/indices in the layout. Using layout->text
	is necessary because when the entry is invisible, it
	doesn't correspond to entry->text.

Sun Oct 20 23:58:03 2002  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtkmenu.c, gtkmenubar.c, gtkmenuitem.c, gtkmenushell.c,
	gtkmenushell.h, gtkmenushell.h

	- make the delay before submenus appear below menu bars a
	  GtkSetting
	- make the delay before submenus pops up a GtkSetting
	- make the stay up triangle slightly larger
	- don't pop up the first submenu immediately.